fixing aligningment of mission copy in desktop view

--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -51,7 +51,7 @@
 
   .mission__copy {
     width: 50%;
-    text-align: left;
+    text-align: right;
   }
 
   .mission__hero-container {
